# battery-deck

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
release-artifacts/MyBatteryManager.app/Contents/: Info.plist
release-artifacts/MyBatteryManager.app/Contents/MacOS/: battery-helper
scripts/: package-release.sh  release.sh  restart-dev.sh
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: battery.rs  helper.rs  lib.rs  main.rs  service.rs  smc.rs  update.rs
