[package]
name = "battery-toolkit"
version = "1.0.0"
description = "Battery charge management for Apple Silicon Macs"
authors = ["smallshow"]
edition = "2021"
default-run = "battery-toolkit"

[lib]
name = "battery_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
static_assertions = "1"
tokio = { version = "1", features = ["time"] }
regex = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
mach2 = "0.4"
